; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_do_add_incr_value.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_do_add_incr_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@metafile_mode = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @do_add_incr_value(i32 %0, i32 %1, i32 %2, i64 %3, i32* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  %12 = load i64, i64* @metafile_mode, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %5
  %15 = load i32, i32* %7, align 4
  %16 = call i64 @prepare_list_metafile(i32 %15, i32 1)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i64 -9223372036854775808, i64* %6, align 8
  br label %40

19:                                               ; preds = %14, %5
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @entry_exists(i32 %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %19
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i64, i64* %10, align 8
  %28 = call i64 @do_change_entry_value(i32 %25, i32 %26, i64 %27, i32 1)
  store i64 %28, i64* %6, align 8
  br label %40

29:                                               ; preds = %19
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* %9, align 4
  %33 = load i64, i64* %10, align 8
  %34 = load i32*, i32** %11, align 8
  %35 = call i64 @do_add_list_entry(i32 %30, i32 %31, i32 2, i32 %32, i64 %33, i32* %34)
  %36 = icmp sle i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %29
  store i64 -9223372036854775808, i64* %6, align 8
  br label %40

38:                                               ; preds = %29
  %39 = load i64, i64* %10, align 8
  store i64 %39, i64* %6, align 8
  br label %40

40:                                               ; preds = %38, %37, %24, %18
  %41 = load i64, i64* %6, align 8
  ret i64 %41
}

declare dso_local i64 @prepare_list_metafile(i32, i32) #1

declare dso_local i64 @entry_exists(i32, i32) #1

declare dso_local i64 @do_change_entry_value(i32, i32, i64, i32) #1

declare dso_local i64 @do_add_list_entry(i32, i32, i32, i32, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
